# kaki

./: .gitmodules  CMakeLists.txt  asset.plecs  assets.json  ecs_test.cpp  game.plecs  main.cpp  main2.cpp  pipeline.json  shader.frag  shader.vert
gltf_compiler/: CMakeLists.txt  gltf_compiler.cpp
kaki/: CMakeLists.txt  asset.cpp  asset.h  cgltf_impl.cpp  gfx.cpp  gfx.h  gltf.cpp  gltf.h  image.cpp  image.h  pipeline.cpp  pipeline.h  render_graph.h  shader.cpp  shader.h  vk.h  vma_impl.cpp  window.cpp  window.h
kaki/asset/: CMakeLists.txt
kaki/asset/include/kaki/: asset.h  package.h
kaki/asset/src/: asset.cpp  package.cpp
kaki/common/: CMakeLists.txt
kaki/common/include/: cereal_ext.h  membuf.h  overloaded.h
kaki/core/: CMakeLists.txt
kaki/core/include/kaki/: core.h  transform.h  vec_cereal.h
kaki/core/src/: core.cpp  transform.cpp
kaki/ecs/: CMakeLists.txt
kaki/ecs/include/kaki/: ecs.h
kaki/ecs/include/kaki/ecs/: childof.h  component.h  identifier.h  query.h  registry.h  type.h  view.h
kaki/ecs/src/: lookup.cpp  query.cpp  registry.cpp
kaki/gfx/: CMakeLists.txt
kaki/gfx/include/kaki/: gfx.h  pipeline.h  shader.h  vk_cereal.h  window.h
kaki/gfx/src/: allocator.cpp  allocator.h  descriptors.cpp  descriptors.h  entity_tree.h  geometry_buffer.cpp  geometry_buffer.h  gfx.cpp  gltf.cpp  gltf.h  graphScript.h  image.cpp  image.h  imgui_theme.h  material.cpp  material.h  pipeline.cpp  pipeline.h  probe.h  render_graph.cpp  render_graph.h  render_graph_build.cpp  renderpass.h  rg_default.h  shader.cpp  upload.cpp  upload.h  vk.h  window.cpp
kaki/job/: CMakeLists.txt
kaki/job/include/kaki/: job.h
kaki/job/src/: job.cpp
kaki/physics/: CMakeLists.txt
kaki/physics/include/kaki/: physics.h
kaki/physics/src/: physics.cpp
packager/: CMakeLists.txt  packager.cpp
pipeline_compiler/: CMakeLists.txt  pipeline_compiler.cpp
shader_compiler/: CMakeLists.txt  shader_compiler.cpp
shaders/: materialPass.frag  materialPass.json  shade.frag  shade.json  shade.vert  visibility.frag  visibility.json  visibility.vert
tools/: CMakeLists.txt
tools/asset_build/: asset_build.cpp
tools/gltf_compiler/: CMakeLists.txt  gltf_compiler.cpp
tools/gltf_scan/: CMakeLists.txt  gltf_scan.cpp
tools/image_packager/: CMakeLists.txt  image_packager.cpp
tools/pipeline_compiler/: CMakeLists.txt  pipeline_compiler.cpp  shader.h
tools/shader_compiler/: CMakeLists.txt
